<resources>
    <string name="app_name">Empress</string>
    <string name="lbl_home">Home</string>
    <string name="lbl_information">Information</string>
    <string name="lbl_cart">Cart</string>
    <string name="lbl_notification">Notification</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="aristo_title">Aristo Tech Co., Ltd</string>
    <string name="aristo_viber_ph">+959981570065</string>
    <string name="aristo_email">aristotech.team@gmail.com</string>
    <string name="aristo_fb">Aristo</string>
    <string name="company_name">Empress</string>
</resources>