<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/action_home"
        android:icon="@drawable/select_bottom_nav_home"
        android:title="@string/lbl_home"/>

<!--    <item android:id="@+id/action_notification"-->
<!--        android:icon="@drawable/ic_notification"-->
<!--        android:title="@string/lbl_notification"/>-->

    <item android:id="@+id/action_cart"
        android:icon="@drawable/select_bottom_nav_cart"
        android:title="@string/lbl_cart"/>

    <item android:id="@+id/action_information"
        android:icon="@drawable/select_bottom_nav_info"
        android:title="@string/lbl_information"/>

    <item android:id="@+id/action_profile"
        android:icon="@drawable/select_bottom_nav_profile"
        android:title="Profile"/>
</menu>